--- a/aspiracoes.html
+++ b/aspiracoes.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atividade17</title>
 </head>
 <body>
+    <h1>Aspirações</h1>
+    <br>
+    <p>Sobre as minhas aspirações, busco aprimorar constantemente minhas habilidades técnicas, aprendendo novas linguagens de programação, e me especializar em áreas específicas, como segurança cibernética, redes, administração de sistemas, desenvolvimento web, entre outros.
+    </p>
+    <br>
+    <ul>
+        <li>Engenheiro de Software ou Desenvolvedor de Software</li>
+        <li>Arquiteto de Soluções em Nuvem</li>
+        <li>Gerente de Projetos de TI</li>
+        <li>Especialista em Segurança da Informação</li>
+        <li>Engenheiro de Redes</li>
+    </ul>
     
 </body>
 </html>
