--- a/estagio.html
+++ b/estagio.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Atividade17</title>
 </head>
 <body>
-    
-</body>
+    <h1>Relatório de Estágio</h1>
+    <br>
+    <h2> Introdução</h2>
+    <p>Integrar uma equipe em uma empresa de internet durante o meu estágio foi uma oportunidade empolgante e enriquecedora que me proporcionou uma visão única sobre o mundo da tecnologia e da conectividade digital. Durante esse período, tive a chance de participar de projetos significativos e vivenciar em primeira mão o impacto da internet nas vidas das pessoas e no funcionamento das organizações.   
+    </p>
+    <br>
+    <h3>Objetivos</h3>
+    <br>
+    <h4>Objetivo Geral</h4>
+    <p>O objetivo geral do meu estágio em uma empresa de internet foi adquirir conhecimentos práticos e experiência em um ambiente de trabalho real, aplicando as habilidades que adquiri ao longo dos meus estudos em um cenário profissional.
+</p>
+<br>
+    <h4>Objetivo Específico</h4>
+    <p>Como objetivo específico, busquei compreender os procedimentos operacionais internos da empresa, como processos de desenvolvimento de software, gerenciamento de projetos, controle de qualidade ou suporte técnico ao cliente
+</p>
+<br>
+<h2>Atividades Realizadas</h2>
+<br>
+<p>Aprendi a onfigurar e manter redes de computadores, garantindo a segurança e o desempenho adequados e Fornecer suporte técnico aos usuários, solucionando problemas técnicos e respondendo a perguntas sobre produtos e serviços.
+</p>
+    <br>
+    <p>Esse estagio foi algo muito bom e de grande importancia para mim.
+    </p>
+
 </html>
